<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddFragment">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">




            <TextView
                android:id="@+id/textHike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add new hike"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <LinearLayout
                android:id="@+id/layoutNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/nameOfTheHike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hike_input_name"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />

                <EditText
                    android:id="@+id/nameHikeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="18"
                    android:inputType="textPersonName"
                    android:hint="Son Dong"
                    android:text=""

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/location_input_name"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />

                <EditText
                    android:id="@+id/nameLocationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="18"
                    android:inputType="textPersonName"
                    android:hint="Da Nang"
                    android:text=""

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDateOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/dateOfTheHike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/date_input_name"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />

                <TextView
                    android:id="@+id/dateHikeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="18"
                    android:hint="07/11/2023"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/radioButtonYesNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/input_parking"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:checked="true"
                        android:text="Yes"/>
                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:text="No"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLengthHike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/input_length"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/lengthHikeText"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:hint="100m"
                    android:textAlignment="center"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDifficultyLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:text="@string/select_level"
                    android:textStyle="bold"
                    android:textSize="18dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="210dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/select"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/difficultyLevelText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/input_description"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />

                <MultiAutoCompleteTextView
                    android:id="@+id/descriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:ems="80"
                    android:inputType="textPersonName"
                    android:hint="There is a big mountain nearby,..."
                    android:gravity="top"
                    />
                <Button
                    android:id="@+id/addButton"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="ADD"
                    android:backgroundTint="@color/black"
                    />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</FrameLayout>